--- a/cmssimulated/master/layout/fullPageLayout.html
+++ b/cmssimulated/master/layout/fullPageLayout.html
@@ -2,13 +2,13 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Thymeleaf Example - Load master from REMOTE</title>
+    <title>Thymeleaf Example - Load master from CMS</title>
     <meta charset="utf-8" />
 </head>
 <body>
-    <esi:include src="http://localhost:4000/master/master-header.html" />
+    <esi:include src="http://cms.server/master-header.html" />
     <div>Hello from REMOTE Master!!!</div>
     <div th:replace="${templateName}" />
-    <esi:include src="/master/master-footer.html" />
+    <esi:include src="http://cms.server/master-footer.html" />
 </body>
 </html>
